---
title: uml package
config:
  htmlLabels: false
umlink:
  select:
    - field: package
      pattern: com.rocket.radar.uml
---

classDiagram
direction LR

%% =====================================================
%% UML AGGREGATE
%% =====================================================

class UmlAggregate {
    <<annotation>>
    + selfCard : String = "1"
    + label : String = ""
    + otherCard : String = "1"
}
%% citation: :contentReference[oaicite:0]{index=0}


%% =====================================================
%% UML ASSOCIATE
%% =====================================================

class UmlAssociate {
    <<annotation>>
    + selfCard : String = "1"
    + label : String = ""
    + otherCard : String = "1"
}
%% citation: :contentReference[oaicite:1]{index=1}


%% =====================================================
%% UML COMPOSE
%% =====================================================

class UmlCompose {
    <<annotation>>
    + selfCard : String = "1"
    + label : String = ""
    + otherCard : String = "1"
}
%% citation: :contentReference[oaicite:2]{index=2}


%% =====================================================
%% UML NAVIGATE
%% =====================================================

class UmlNavigate {
    <<annotation>>
    + selfCard : String = "1"
    + label : String = ""
    + otherCard : String = "1"
}
%% citation: :contentReference[oaicite:3]{index=3}


%% =====================================================
%% UML SKIP (ignore during UML generation)
%% =====================================================

class UmlSkip {
    <<annotation>>
}
%% citation: :contentReference[oaicite:4]{index=4}


%% =====================================================
%% RELATIONSHIPS (conceptual)
%% =====================================================

UmlCompose --> UmlAggregate : "similar semantics"
UmlAssociate --> UmlAggregate : "same family"
UmlNavigate --> UmlAssociate : "specialized directional form"

UmlSkip --> AnyElement : "ignored element"
